add music and notifications

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ ansi_term = "0.12"
 dirs = "5"
 jiff = "0.1.1"
 figlet-rs = "0.1.5"
+rodio = "0.19.0"
+notify-rust = "4.11.0"
 
 [dev-dependencies]
 pretty_assertions = "1"
