--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -28,6 +28,11 @@ jobs:
         curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs > rustup-init.sh
         sh rustup-init.sh -y --default-toolchain none
         rustup target add ${{ matrix.target }}
+
+    - name: install alsa
+      run: |
+        sudo apt-get install -yqq alsa
+
     - name: build
       id: release-build
       run: |
